# interview_code

./: CMakeLists.txt  README.MD
directory_big/: test.txt
directory_big/bebebe/: bebebe.txt
directory_big/haha/: tt
src/client/include/: client.hpp
src/client/src/: checktext.cpp  client.cpp  utility.cpp
src/server/include/: server.hpp
src/server/src/: count.cpp  server.cpp  utility.cpp
